syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumResponse {
    int32 sumResult = 1;
}

message PrimeNumberDecompositionReqeust{
    int64 number = 1;
}

message PrimNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};

    rpc PrimeNumberDecomposition(PrimeNumberDecompositionReqeust)
    returns (stream PrimNumberDecompositionResponse) {};

    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse);

    // Error handling
    // this RPC will throw an exception if the sent number is negative
    // The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}